# equinox-protocol

./: README.md  netlify.toml
equinox-frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
equinox-frontend/app/: layout.tsx  page.tsx
equinox-frontend/components/: AdminPanel.tsx  DepositPanel.tsx  KeeperStatus.tsx  RedeemPanel.tsx  TransactionHistory.tsx  WalletButton.tsx  WalletProvider.tsx  YieldTicker.tsx
equinox-frontend/lib/: idl.json  program.ts
equinox-keeper/: .env  index.js  package-lock.json  package.json
equinox_protocol/: .gitignore  Anchor.toml
equinox_protocol/programs/equinox_protocol/: Cargo.toml
equinox_protocol/programs/equinox_protocol/src/: lib.rs
equinox_protocol/tests/: equinox_protocol.ts
